[gd_scene load_steps=18 format=4 uid="uid://o3vibfu51fqh"]

[ext_resource type="Script" uid="uid://82anhl3164oo" path="res://prefabs/props/co_t_tv_1.gd" id="1_2e6ma"]
[ext_resource type="Texture2D" uid="uid://cvkxkks8l5lhf" path="res://resources/3Denemy/televisions/TV1_TV-Diffuse.png" id="1_8s3f8"]
[ext_resource type="AudioStream" uid="uid://ryuss0iawcdb" path="res://resources/sounds/Cave of Time Pt. 3_looped.ogg" id="3_6o8vu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2e6ma"]
resource_name = "Screen"
cull_mode = 2
albedo_color = Color(1, 0, 0, 1)
metallic_specular = 0.0
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6o8vu"]
frequency = 0.5

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_m3plc"]
noise = SubResource("FastNoiseLite_6o8vu")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_m3plc"]
frequency = 0.1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xrio4"]
noise = SubResource("FastNoiseLite_m3plc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6o8vu"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.156863)
albedo_texture = SubResource("NoiseTexture2D_xrio4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mtgwc"]
resource_name = "TV1"
cull_mode = 2
albedo_texture = ExtResource("1_8s3f8")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_dofvt"]
_surfaces = [{
"aabb": AABB(-0.463113, 0.00474837, -0.640983, 0.929771, 0.937554, 0.947376),
"format": 34896613377,
"index_count": 774,
"index_data": PackedByteArray("NAA1AAEANAABAAoAAAAKAAEACgA2ADQAAAABAF4AXwBeAAEAXwABADUAAgBeAF8AAABeAAIAYABfADUANwAKAAAACgA3ADYANwAAAEAAAgBfAD4APgBfAGAAAAACAAgAQAAAAAgAAgA+AD8AAgA/AAgAPgBEAD8ACAA/AEEAPgBgAEUAPgBFAEQAPwBEAEMAPwBDAEEACABBAEIAQAAIAEIAQQBDAGEAQgBBAGIAQQBhAGIAQgBiACgAKABAAEIAKQAoAGIAKAAmAEAAJgAoACkAJABAACYAJAA3AEAAJwAkACYANwAkAGMAJwBjACQANwBjADYAKQBiAEoASgBiAGEAJgApAGQAJwAmAGQALAApAEoALABkACkALAArAGQAKwAnAGQALABKAC4AKwAtACcALgBKAEsASgBhAEsALgBLADAASQAnAC0AJwBJAGMASQAtAC8AKgAwAEsAKgBLAGEAKgAyADAAKgAzADIASQBlAGMATABJAC8ASQBMAGUATAAvADEAMwBMADEANgBjAGUAMwAlAEwAZQBMACUAKgAlADMANgBlADgANAA2ADgAZgA4AGUAZQAlAGYANAA4ADkAOQA1ADQAZgA6ADgAOgA5ADgAJQAjAGYAIwA6AGYAOQA7ADUAYAA1ADsAOgA8ADkAPAA7ADkAZwBgADsAPABnADsAZwBoAGAAaABFAGAAaQA8ADoAIwBpADoAagBnADwAaQBqADwAawBoAGcAagBrAGcAaABsAEUAawBtAGgAbQBsAGgARQBsAEcARQBHAEQAbQBuAGwARABHAEYARABGAEMAbABvAEcAbABuAG8ARwBwAEYARwBvAHAAQwBGAHEAQwBxAGEAKgBhAHEARgAfAHEAKgBxAB8ARgBwAB8AbwByAHAAKgAfAE0AJQAqAE0AcAAdAB8AcAByAB0ATQAfACIAJQBNAE4AHwAgACIAHwAdACAATQAiAFAATgBNAFAAUAAiACAAJQBOACMATgBQAFEAIwBOAFEAUAAgAFIAHQBSACAAUQBQAFIAIwBRACEAHAAjACEAHABpACMAUQAeACEAHAAhAB4AUQBSAFMAUQBTAB4AVQAcAB4AVQAeAFMAHABzAGkAcwBqAGkAVABTAFIAHQBUAFIAVABVAFMAVAAdABoAcgAaAB0AVQBUAHQAVAAaAHQAcwB1AGoAdQBrAGoAGwBzABwAVQAbABwAdgB1AHMAGwB2AHMAdQB3AGsAbQBrAHcAVQB4ABsAVQB0AHgADwB2ABsAeAAPABsAdgB5AHUAeQB3AHUAegB4AHQAeAB6AA8AewB5AHYADwB7AHYAeQA9AHcADwB8AHsAewB9AHkAfQA9AHkAfAB9AHsAbQB3AH4AfgB3AD0AbgBtAH4AfQB/AD0AgAB/AH0AfACAAH0APQB/AIEAEACAAHwAEQAQAHwAEAAHAIAAgABbAH8ABwBbAIAAWwCBAH8ABwAGAFsABQBbAAYABQCCAFsAWwCCAIEAAwCCAAUAAwBIAIIASAADAAQAggCDAIEAggBIAIMASAAEAFoAgwBIAFoAWgAEAAkAhACBAIMAPQCBAIQAfgA9AIQAWgAJAIUAhQAJAAwAgwBaAIYAhgBaAIUAhACDAIcAhwCDAIYAiAB+AIQAiACEAIcAbgB+AIgAhwCGAFkAiACHAFkAbgCIAIkAiABZAIkAbgCJAG8AbwCJAHIAiQBPAHIAiQBZAE8AcgBPABoAWQCGAIoAWQCKAE8AhgCFAIoATwCKAAsATwALABoAhQALAIoAGgALAFYAGgBWAHQAhQBXAAsAVwBWAAsAhQAMAFcAegB0AFYADABYAFcAVwBYAFYAegBWAFgADAAOAFgAegBYAF0ADQBYAA4ADQBdAFgAegBdAFwAegBcAA8ADwBcAHwAEQB8AFwAXQARAFwAXQATABEAFAAOABMAFAATAF0ADQAOABYAFAAWAA4ADQAWABcAFABdABIADQASAF0AFAASABUAEgANABkADQAXABkAEgAZABUAFgAYABcAFgAUABgAGAAZABcAFAAVABgAGAAVABkA"),
"lods": [0.000304747, PackedByteArray("NAA1AAEANAABAAoAAAAKAAEACgA2ADQACgA3ADYANwAKAAAANAA2ADgANwAjADYANgAjADgANAA4ADkAOQA1ADQAOgA5ADgAIwA6ADgAOQA7ADUAPAA7ADkAOgA8ADkAPQA1ADsAPAA9ADsAAgABADUAAAABAAIAAgA1AD4APgA1AD0AAAACAAgAAgA+AD8AAgA/AAgAQAAAAAgANwAAAEAACAA/AEEACABBAEIAQAAIAEIAQgBBACgAKABAAEIAPwBDAEEAQQBDACgAJAA3AEAAPwBEAEMAPgBEAD8ANwAkACMAPgBFAEQAPgA9AEUARABGAEMAQwBGACgARQBHAEQARABHAEYASABFAD0ARQBIAEcAJABAACYAKAAmAEAAJwAkACYAJwAjACQAJgAoACkAJwAmACkAKwAnACkAKwAtACcALAArACkASQAnAC0AJwBJACMASQAtAC8ALAApAEoAKQAoAEoALABKAC4ALgBKAEsASgAoAEsALgBLADAATABJAC8ASQBMACMATAAvADEAMwBMADEAKgAwAEsAKgBLACgAKgAyADAAKgAzADIAMwAlAEwAKgAlADMAIwBMACUAKgAoAB8ARgAfACgAJQAqAE0AKgAfAE0AJQBNAE4AJQBOACMATQAfACIARgBPAB8ARwBPAEYATgBNAFAATQAiAFAAIwBOAFEATgBQAFEAUAAiACAAHwAgACIAUAAgAFIAUQBQAFIAHwAdACAAHQBSACAATwAdAB8AIwBRACEAHAAjACEAUQAeACEAHAAhAB4AUQBSAFMAUQBTAB4AHAA6ACMAVABTAFIAHQBUAFIAVQAeAFMAVQAcAB4AVABVAFMAVQAbABwAVQBUABsAGwA6ABwAVAAdABoAVAAaABsATwAaAB0ADwA6ABsAGgBWABsADwAbAFYAGgALAFYATwALABoAVwBWAAsATwAJAAsACQBXAAsACQAMAFcAVwBYAFYADABYAFcADwBWAFgADAAOAFgAWQAJAE8ARwBZAE8AWQBaAAkAWgAEAAkASABZAEcASABaAFkASAAEAFoASAADAAQAAwBIAFsAAwBbAAUABQBbAAYAPQBbAEgABwAGAFsABwBbAD0ABwA9ADwAOgAHADwAEAAHADoADwAQADoADwBcABAAEQAQAFwADwBdAFwAXQARAFwADwBYAF0AXQATABEADQBdAFgAFAATAF0ADQBYAA4AFAAOABMADQAOABYAFAAWAA4ADQAWABcAFABdABIADQASAF0AFAASABUAEgANABkADQAXABkAEgAZABUAFgAYABcAFgAUABgAGAAZABcAFAAVABgAGAAVABkA"), 0.05137, PackedByteArray("AAABAAIAAgABAAMAAgADAAQAAwABAAUABQABAAYABwAGAAEAAgAEAAgAAAACAAgABAAJAAgAAAAKAAEABwABAAoACQALAAgACQAMAAsADAANAAsADAAOAA0ADwAHAAoAEAAHAA8ADwARABAACwANAA8ADwASABEAEgATABEADwANABIAFAATABIAFAAOABMAFAASABUADQAOABYAFAAWAA4ADQAWABcAFgAUABgAFAAVABgAFgAYABcAEgAZABUAEgANABkAGAAVABkADQAXABkAGAAZABcAGgALAA8ACAALABoADwAbABoAGwAPABwAHAAaABsADwAKABwACAAaAB0AHAAdABoAHQAcAB4ACAAdAB8AHQAeACAAHwAdACAAIQAgAB4AHAAhAB4AIQAiACAAHwAgACIAHwAiACEAHAAjACEAHAAKACMAIwAfACEACgAkACMAJAAKAAAAJQAfACMAJQAjACQAJAAAACYAJgAAAAgAJwAkACYAJwAlACQAKAAmAAgACAAfACgAJwAmACkAJgAoACkAKgAoAB8AKQAoACoAJQAqAB8AKwAnACkALAArACkAKwAtACcAJQAnAC0ALAApAC4ALgApACoAJQAtAC8ALgAqADAAJQAvADEAKgAyADAAMwAlADEAKgAzADIAKgAlADMA")],
"name": "TV1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 139,
"vertex_data": PackedByteArray("/3/b+J59AADrMPy/AAAAABPP/L8AAAAAsuYAAAAAAAD//wAAnn0AAP9/AAAAAAAATBkAAAAAAAAAAAAAnn0AAP////+efQAA//8AAEHSAAAAAP//nn0AAP//KC5E9AAA//8AAD37AAAvp+sXIvcAAEesAAA9+wAAAAAoLkT0AAAAAAAAQdIAAAAAAAA9+wAA80zrFyL3AADaRwAAPfsAAPNMDQUi9wAA80zrFzryAAAvpw0FIvcAAC+nDQU68gAA80wNBTryAAAvp+sXOvIAAP//dTA9+wAAAAB1MD37AAAAAEE9PfsAAP//6zw9+wAAAABBPf7/AAD//7NFPfsAAP//6zz//wAAAABFRv7/AAD//7NF//8AAAAARUY9+wAAAAD//z37AAB0G6VQPfsAAHCAFf97/AAAOxu44T37AAD/////PfsAAMPkuOE9+wAAceWlTz37AAD/f7jhcvIAAMPkuOFy8gAAOxu44XLyAABZ5ImjcvIAAKUbiaNy8gAA7+NbZXLyAAAPHFtlcvIAAHHlpU9y8gAAdBulUHLyAAAAAFeknn0AABwlFZEAAAAAAADFpEHSAAAAAP//QdIAAAAAl2VB0gAAAADdZJ59AAAAAMBNQdIAAEwZL2IAAAAAAAA1TZ59AABMGUQoAAAAAOLarZAAAAAA//+qsZ59AABLgBL9QdIAAP//BbJB0gAA/////0HSAAD//wxkQdIAAP//VWOefQAAsuZfYQAAAAD///pMQdIAAP//cUyefQAAsuYUGAAAAAClG4mjPfsAAFnkiaM9+wAA7+NbZT37AAAPHFtlPfsAACzNJkk9+wAA0jImST37AAD//04wQdIAACzNJkn//wAA0jImSf//AACAyfE+//8AAH428T7//wAAgMnxPj37AAB+NvE+PfsAAEvEKC5E9AAA///5HD37AABHrPkcPfsAAP///S+efQAA//+yHJ59AABMGRQYAAAAAAAA+Rw9+wAA2kf5HD37AAD/f/y/AAAAAP9/4ZAAAAAA/3/HYQAAAAD//2RkPfsAAP//MbI9+wAAAAD5pD37AAD/f7jhPfsAAAAA8GU9+wAAAAACTj37AABMGXVIAAAAAP9/JkgAAAAAAAAKRkHSAAAAAI9Fnn0AAEwZB0AAAAAAsubXRwAAAAD/f80/AAAAALLmkz8AAAAA///+RJ59AAD//3lFQdIAAP//PE09+wAA//+5PEHSAAAAAA49QdIAAEvEdTA9+wAAAACkPJ59AAAAAE4wQdIAAEwZNTYAAAAAszt1MD37AAAAAP0vnn0AALM7KC5E9AAAAAAELkHSAAAAAOIcQdIAAAAAti2efQAA/38SNgAAAABMGVsmAAAAAAAAshyefQAA/39bJgAAAAD/fxQYAAAAALLmWyYAAAAA/39EKAAAAAD//+IcQdIAAP//ti2efQAAsuZEKAAAAACy5vA1AAAAAP//TzyefQAA//8ELkHSAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_570vt"]
resource_name = "TV1_TV1"
_surfaces = [{
"aabb": AABB(-0.463113, 0.00474837, -0.640983, 0.929771, 0.937554, 0.947376),
"attribute_data": PackedByteArray("nFsJ1o05WOqNObLBxVvw9sVbJbUpYVV8YkGlfCZICXXmR2JQW3rsdEdB500ogYF8OHqFUA2B502vIs1NTzIEUJwNBFBPMspNDxPPTZsNyk2wklVPsJK0gXaQtIF2kFRPAUCrZT8AlWU/AHViAUB1Ymyncs1sp5jmMqVyzTKlvv9sp77/yFM5dMhT/VOvc0FUlHMKdJMOm5tqEJubahAK3JMOCtzYCI7b2Aiwmw0KjtsNCrCbvQQSRr0E3UPyBd1D8gUSRvc0oWiRQLKGQQCyhpBAQHGPQN1mLDHdZmM03WboLt1mQADdZj4meIcoV9aHLld9qP8VfajcBDjb6wR2mx8HdpsfBzfb9wzmm/cMzdvDC83bwwvmm/cDGET3A1xGwwJcRsMCGERwV0Opp0ALr8MVQ6lwV0e19kFHtYEpC6+nQOuzwxVHtYEp67MyKEe1jFxUvjJ9Wb6PfUHvjFyC/zcWeqM3FvWMdRf1jHUXeqNpS25CrkZuQq5G9itpS/Yr6EXuK+hFbkKqRG5CqkTuK+sFsJrrBfKVKgfylSoHsJpNBRjzTQXV9w4E1fcOBBjzu9/pQ9XfICS+/xMkv/9PRPnmTNv55r7/v+S+/8DkH/DB5IDgv+RM2+Jcjr3yetqIt3xuibd8j4y3fMSOt3yRvVRyQH23fEF94lw/fUuvTh2cm31Nu5VOHdvITh36wn1NjFws6GF9TeOMXAPYMn1Y14xc/dEyfZnIMn16xEgXsoYrF0BxCidAcTonsoZAAEBxCC1AcSwtsoZIOd1mOEhuZUlI1FXxTb1OZXSnTjh6UmUUerdVVHJjibd8iYTiXHSE4lxNieJcc5BUcpeQ4lwzllRyY5biXOGpVHL5qVRykL1OMqeHXT7Wh+M9fai3Q32o8Sl9qAdR1of2Sn2o4E99qPzmgOD65h/wsCIHUBATClBvMhdm0g0XZshTf2mdc6tpahChqvZByq1wV8qtMijKrcMVyq0fSEOp6QjgzusIXqggCl6oHgrgzhEEH6ihBgipHgSQzq4Gpc3pDICp6wwzzrcLM861C4Cp28hZI7uVWSO7lWkn28i+NevFnkGsmLhBu5XzNcPfijm//5U5Mn3M0IxcCtAyfabOjFzFzTJ9JsyMXIzKjFz4yTJ9HciMXKPFjTkF1pMOA81qEAPNkw6hqh0X3WbzJt1m9izdZvcuQHEYL7KGOTFAcVUxsoZtNEBxgzSyhgA1QHEVNbKGTjlAcVw5soZXQSBpS0GaVUFh+nQbgaplEoHZVQ6B2E9IQctP50zWh2RN1oeKS32obEnWh9NHfaj4RtaHnUV9qN1E1ociMXViHg91YlRy0IhUcoKE4ly6iOJcZYxUcoGM4lyUjlRytI63fKiQt3x5lrd8BapLr9k1S6+rQUuvfU27lX4vS69qL9vIVi+7lWAtS69RLdvIQy27lekqS6/gKtvI2CpLr2kn28hpJ9vI7yZLr+8mu5XvJkuvWSMypZjm9kHKrfZBR7UUJUOpMijKradAC6/2Qcqtp0Drs/ZBR7UyKEe1gSnrszIoR7UyKMqtgSkLrw=="),
"format": 34896613399,
"index_count": 774,
"index_data": PackedByteArray("hACFAFYAhABWAFcAhgCFAIQAhgCHAIUAiACHAIYAiADPAIcA0ADPAIgA0ADRAM8A0gDRANAA0gDTANEA1ADTANIA1ACJANMA1QCJANQA1QDWAIkA1wDWANUA1wCKANYAVACKANcAVABVAIoAAADYAAIAAAACAAQAAAABANgAAAADAAEA2QDaACcA2QAnACgA2gDZANsA2gDbALQAJQC0ANsAJQAmALQAiwCMAI0AMwCMAIsAMwCPAIwAiwCNAI4AjwDcAIwAjwA5ANwAjADcAN0AjADdAI0A3gCNAN0AkACOAI0A3gCQAI0AkACRAI4AOACQAN4A3wCRAJAAOADfAJAA3wDgAJEANgDfADgA4QDgAN8ANgDhAN8A4QDiAOAANwDhADYA4wDiAOEANwDjAOEA4wDkAOIAMQDjADcA5QDkAOMAMQDlAOMA5QDmAOQAMQDnAOUA5wDmAOUAMQCSAOcANQDnAJIA5wDoAOYANQA0AOcANADoAOcANAAyAOgAkwDpAOoAkwDqAJQABwDpAJMABwAGAOkABQAGAAcABQAHAOsACQAFAOsACQALAAUACQDsAAsACQCXAOwAlwDtAOwAlwCYAO0A7QCYAAwA7QAMAO4ADAANAO4ADACWAA0ADACVAJYADAAIAJUACAAKAJUACADvAAoACADqAO8ACACUAOoA8ADxAPIA8QCrAPIA8ADyAKoA8QCpAKsAqQA8AKsAqQA7ADwA8wDwAKoA8wCqAPQA9QDzAPQA9QD0APYA9wD1APYA9wD2AKcApQD3AKcApQCnAKYApAClAKYApACmAKgAOgCkAKgAOgCoAD0AsAD4ABsAsAAbABgAsAD5APgAsACxAPkAsQAaAPkAsQAZABoAmQD6AHcA+wB3APoA+wCaAHcA+wB9AJoA+wB8AH0AmQB3AHgAmwB8APsAmwB+AHwA/ACbAPsA/AD7APoAnAD8APoAnAD6AJkA/QCcAJkA/gCZAHgA/QCZAP4A/gB4AHkA/wD9AP4AAAH+AHkA/wD+AAABAAF5AHoAnQD/AAABngAAAXoAnQAAAZ4AngB6AAEBnwCdAJ4AoACeAAEBnwCeAKAAoAABAQIBoQCfAKAAogCgAAIBoQCgAKIAdgChAKIAogACAQMBdgCiAKMAowCiAAMBowADAXsArACtAHMArQByAHMArQBxAHIArABzAHQAdQCsAHQAdQBwAKwADgCuAK8AEQCuAA4AEQAPAK4ADgCvABIAEAASAK8AEAATABIABAEFAcsABQGAAMsABQEGAYAAgwAGAQUBgwAFAcoAygAFAQQBBAHLAMwAygAEAckABwEEAcwACAHJAAQBBwEIAQQBCAEJAckACgEIAQcBCwEJAQgBCgELAQgBCwEMAQkBCwEKAQ0BDAELAQ4BCwENAQ4BDAEOAQ8BDgENAcgADwEOARABDgHIABABDwEQAREBEAESAREByAATARABEAETARIByAAUARMBxwATARQBFQESARMBxwAVARMBFQHGABIBggDGABUBggAVAX8AfwAVAccAfwDHAIEAFAAVABYAFAAWABcAHAAdABYBHAAWAR4AHQAfABYBHQAgAB8AsgAiACMAsgAjALMAJACyALMAJAAhALIASwC1AE4ASwBOAFAAugC7ALwAuwAsALwAuwAqACwAugC8AL0AKQC6AL0AKQC9ACsALQAuAC8ALQAvADAAvgA/AEAAvgBAAL8AwAC+AL8AwAC/AMEAwADBAEEAwABBAD4AwgDDAMQAwwBEAMQAwwBDAEQAwgDEAMUAQgDCAMUAQgDFAEUARgBHAEgARgBIAEkAtgAXAbkAtgC5AEoATQAXAbYATQAYARcBGQG5ABcBGQEXARoBGQEaAbgAGQG4AEwAGgFRALgAGgFTAFEAWABZAFoAWABaAFsAGwFPALcAGwG3ABwBUgAdAR4BUgAeAR8BXABdAF4AXABeAF8AYABhAGIAYABiAGMAZABlAGYAZABmAGcAaABpAGoAaABqAGsAIAEhASIBIAEiASMBzQBtAG4AzQBuAM4AbADNAM4AbADOAG8A"),
"lods": [0.000304747, PackedByteArray("hACFAFYAhABWAFcAhgCFAIQAhgCHAIUAiACHAIYAiACJAIcAVACJAIgAVACKAIkAVABVAIoAAAABAAIAAAADAAEAAAACAAQAiwCMAI0AMwCMAIsAiwCNAI4AMwCPAIwAjwA4AIwAjAA4AI0AjwA5ADgAkACOAI0AOACQAI0AkACRAI4ANgCQADgAkAAyAJEANwCQADYANAAyAJAAMQCQADcAMQA0AJAAMQCSADQANQA0AJIABQAGAAcABwAGAJMACQAFAAcAkwAGAJQACQALAAUACACUAAYACAAGAAoACAAKAJUADAAIAJUADACVAJYACQANAAsADACWAA0ACQCXAA0ADQCYAAwAlwCYAA0AmQB8AHcAmQB3AHgAfACaAHcAfAB9AJoAmQB4AHkAmwB+AHwAnACbAHwAnAB8AJkAmQB5AHoAnQCcAJkAngCZAHoAnQCZAJ4AngB6AHsAnwCdAJ4AnwCeAKAAoACeAHsAoQCfAKAAogCgAHsAoQCgAKIAowCiAHsAdgChAKIAdgCiAKMApAClAKYApQCnAKYApACmAKgAOgCkAKgAOgCoAD0ApQCpAKcAqQCqAKcAqQCrAKoAqQA8AKsAqQA7ADwArACtAHMArQByAHMArQBxAHIArABzAHQAdQCsAHQAdQBwAKwADgCuAK8AEQCuAA4AEQAPAK4ADgCvABIAEAASAK8AEAATABIAFAAVABYAFAAWABcAsACxABsAsAAbABgAsQAaABsAsQAZABoAHAAdAB4AHQAfAB4AHQAgAB8AsgAiACMAsgAjALMAJACyALMAJAAhALIAJQAmALQAJQC0ACgAJwAoALQASwC1AE4ASwBOAFAAUgBQAE4ATQBOALUAUgBOAFMATQC1ALYAUgBTALcASwC3ALUAUgC3AE8ASwBPALcAtwBTAFEAtwBRALgATAC3ALgATAC1ALcATAC5ALUAtgC1ALkAtgC5AEoAugC7ALwAuwAsALwAuwAqACwAugC8AL0AKQC6AL0AKQC9ACsALQAuAC8ALQAvADAAvgA/AEAAvgBAAL8AwAC+AL8AwAC/AMEAwADBAEEAwABBAD4AwgDDAMQAwwBEAMQAwwBDAEQAwgDEAMUAQgDCAMUAQgDFAEUARgBHAEgARgBIAEkAWABZAFoAWABaAFsAXABdAF4AXABeAF8AYABhAGIAYABiAGMAZABlAGYAZABmAGcAaABpAGoAaABqAGsAggDGAMcAggDHAH8AfwDHAIEAyADHAMYAxgDJAMgAygDIAMkAygDLAMgAyADLAMwAgwDLAMoAgwCAAMsAzQBtAG4AzQBuAM4AbADNAM4AbADOAG8A"), 0.05137, PackedByteArray("AAABAAIAAAADAAEAAAACAAQABQAGAAcABwAGAAgACQAFAAcACAAGAAoACQALAAUADAAIAAoACQAMAAsADAAKAA0ADAANAAsADgAPABAAEQAPAA4ADgAQABIAEAATABIAFAAVABYAFAAWABcAGAAZABoAGAAaABsAHAAdAB4AHQAfAB4AHQAgAB8AIQAiACMAJAAhACMAJQAmACcAJwAoACUAKQAqACsAKgAsACsALQAuAC8ALQAvADAAMQAyADMANAAyADEAMQA1ADQAMQAzADYANwAxADYANgAzADgAMwA5ADgAOgA7ADwAOgA8AD0APgA/AEAAPgBAAEEAQgBDAEQAQgBEAEUARgBHAEgARgBIAEkASgBLAEwATQBLAEoATQBOAEsATABLAE8ASwBOAFAATABPAFEAUgBQAE4ATwBTAFEAUgBOAFMAUgBTAE8AVABVAFYAVABWAFcAWABZAFoAWABaAFsAXABdAF4AXABeAF8AYABhAGIAYABiAGMAZABlAGYAZABmAGcAaABpAGoAaABqAGsAbABtAG4AbABuAG8AcABxAHIAcAByAHMAcABzAHQAdQBwAHQAdgB3AHgAdgB4AHkAdgB5AHoAdgB6AHsAfAB3AHYAfAB9AHcAfgB8AHYAfwCAAIEAggCAAH8AgwCAAIIA")],
"material": SubResource("StandardMaterial3D_mtgwc"),
"name": "TV1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 292,
"vertex_data": PackedByteArray("/3/b+J59EtvrMPy/AADB4BPP/L8AAJTfAAD//559wNv/////nn0L2XCAFf97/Of//////z375P/D5LjhPfvl/3HlpU89++f/Oxu44T376v///7NFPfvn/wAA//89++r/dBulUD375/8AAEVGPfvn/1nkiaNy8ijVw+S44T37KNVx5aVPPfsQ18PkuOFy8ijV7+NbZXLyGtZx5aVPcvIQ13HlpU89+3DVdBulUD37cNV0G6VQcvJw1XHlpU9y8nDVAABBPT37/////+s8Pfv/////dTA9+///AAB1MD37///D5LjhcvJU1f9/uOFy8lTVw+S44T37VNU7G7jhPftU1TsbuOFy8lTVcIAV/3v86sH/f9v4nn3ayf////+efWvI/////z37ZsD//3UwPftZzv//KC5E9FnOAAAoLkT0Wc4AAHUwPftZzgAARUY9+//T//+zRT379NYAAEVG/v//0///s0X///TW//+zRT37/////+s8Pfv/////6zz///////+zRf////8AACguRPRU1QAAAACefanXAAD//559ANkAAAAAQdJU1QAAAAA9+1TVAABBPT37VNUAAHUwPftU1QAARUY9+1TVAAD//z37VNUTz/y/AACM2rLmAAAAAA/a//8AAJ59qdf/////nn0A2QAARUb+/wzA//+zRf//DMD//+s8//8MwAAAQT3+/wzA///rPD37N9YAAEE9PfuZ1AAAQT3+/5nU///rPP//N9YAAEE9Pfv//wAARUY9+///AABFRv7///8AAEE9/v//////KC5E9NmPL6frFyL3BJwAACguRPTZj///AAA9+wCAR6wAAD37BJzzTOsXIvf+my+nDQUi9wScAAAAAD37AIDzTA0FIvf+m9pHAAA9+wCAAAAAAJ59+/9MGQAAAAD//+sw/L8AANr6AAD//5599v/zTOsXIvdU1S+n6xci91TVL6frFzryVNXzTOsXOvJU1fNMDQU68v+/80zrFzry/78vp+sXOvL/vy+nDQU68v+/L6cNBSL3VdXzTA0FIvdV1fNMDQU68lXVL6cNBTryVdUvp+sXIvf//y+nDQUi9///L6cNBTry//8vp+sXOvL///NMDQUi9///80zrFyL3///zTOsXOvL///NMDQU68v//AAD//z37ZcAAAP//nn3+x/9/2/iefdvJcIAV/3v86sF0G6VQPfsq/zsbuOE9+8z/Oxu44XLyzP+lG4mjcvLM/w8cW2Vy8q3/dBulUHLyKv//////nn3/////KC5E9P////91MD37/////+s8Pfv/////s0U9+////////z37/////wAAQdL/////AAA9+/////8AAJ59////fwAAAAD//+sw/L8AAP//TBkAAAAA//+y5gAAAAD//xPP/L8AAP//AABXpJ59jv8cJRWRAAB9+QAA3WSefY//TBkvYgAAOPwAADVNnn3//0wZRCgAAPv/TBkUGAAA//8AAFeknn2K2QAAxaRB0lTVAACXZUHSVNUAAN1knn1q2AAA//9B0lTVAADATUHSVNUAADVNnn2p1wAA+Rw9+1TVWeSJoz375//v41tlPfvn/yzNJkk9++f/0jImST375/+lG4mjPfvn/w8cW2U9++f///9OMEHS//////kcPfv/////shyeff/////9L559/////3FMnn3/////+kxB0v////9VY559nv///wxkQdL/////qrGefaL///8FskHS////////QdL//+LarZAAABfYsuZfYQAAfNf//1Vjnn3I1///cUyefanX//+qsZ59Atmy5hQYAAAP2v///S+efanX//+yHJ59qdcPHFtlPfut/6UbiaM9+8z/WeSJoz37KNXv41tlPfsa1n428T49+///gMnxPj37//9LgBL9QdKUwf////9B0gHAS8QoLkT0Wc5HrPkcPfsEnP//+Rw9++yH2kf5HD37/psAAPkcPfvsh0vEKC5E9NmP0jImST37qdQszSZJPfsj1izNJkn//yPW0jImSf//qdQszSZJ//8MwIDJ8T7//wzA0jImSf//DcB+NvE+//8NwIDJ8T49+8XVfjbxPj3799R+NvE+///31IDJ8T7//8XVsuYUGAAA//9MGRQYAAD//0wZRCgAAP//suZfYQAA///i2q2QAAD//xwlFZEAAP//TBkvYgAA//8AAP//QdJjwEuAEv1B0pTBTBl1SAAA//8AAI9Fnn3//0wZB0AAAP//AACkPJ59//9MGTU2AAD//wAA/S+eff//AAC2LZ59+/9MGVsmAAD//wAAshyeffv//3/8vwAA1d+zO3UwPftZzrM7KC5E9FnOS8R1MD37Wc4AAPmkPftU1QAA8GU9+1TVAAACTj37VNUAAApGQdJU1QAAj0WefanXAAAOPUHSVNUAAKQ8nn2p1wAATjBB0lTVAAD9L559qdcAAAQuQdJU1QAAti2efanXAADiHEHSVNUAALIcnn2p1///MbI9++f///9kZD375///f7jhPfvn/wAA+aQ9++f/AADwZT375/8AAAJOPfvn////PE09++f/suZEKAAAD9qy5lsmAAAP2v//ti2efanXsubwNQAAD9r//088nn2p17Lmkz8AAA/a///+RJ59qdey5tdHAAAP2rM7dTA9+///S8R1MD37/////wQuQdL/////4hxB0v////+2LZ59/////088nn3/////uTxB0v/////+RJ59/////3lFQdL/////PE09+/////9kZD37/////zGyPfv///9/x2EAAP///3/hkAAA////f/y/AAD//0wZdUgAAP///38mSAAA//+y5tdHAAD//0wZB0AAAP///3/NPwAA//+y5pM/AAD//0wZNTYAAP///38SNgAA//+y5vA1AAD///9/RCgAAP//suZEKAAA//+y5lsmAAD///9/WyYAAP//TBlbJgAA////fxQYAAD///9/uOE9+1TVR6z5HD37l4pHrAAAPfsAgLM7KC5E9NmP2kf5HD37l4ovp+sXIvf+m0es+Rw9+/6bL6cNBSL3/ptHrAAAPfv+m9pHAAA9+/6b80wNBSL3BJzaRwAAPfsEnNpH+Rw9+wSc80zrFyL3BJz7rRmuqLDxr2CwDLGOrSSsZa18rkkC/v9OAKj/aAC4//////+W/7r//////7L/qP///////////2fVJtVn1SbVeNQ212fVJtXv1C/WeNQ2176qhKq+qoSqvqqEqr6qhKr/f/9//3//f/9//3//f/9/VFVVVVRVVVVUVVVVVFVVVVRVVVXB/4d/Zv+pgMn90oQS/3uCHFobWhxaG1ocWhtaHFobWtipTaygq72o2KlNrKCrvaj/v/9//b/8f/+//3/9v/x/VFWpqvdTB6w2U8isVFWqqlRVqqpUVaqqVFWpqlRVqqpUVaqqfLR3U1ytolIHrPdTyKw2U/9//3//f/9//3//f/9//3/OVGNWx1VwVMdVcFTOVGNW////v////7////+/////v/7//3/5hij+/v//f/9////4hij+AAD/f/iGKP7/f///////f/9////iPAWAvjkDgO77YUghOwqAVFVVVVRVVVVUVVVVVFVVVf9//3//f/9//3//f/9//3+pqqqqqaqqqqmqqqqpqqqq////v////7////+/////v/2//H//v/9//b/8f/2//H+F/ad+x/mrfLP/8H7N/51/7gB2wOW/M4DlvzOA5b8zgF4ALsDuAHbA4cT8f/2//H/9v/x//7//f/2//H/9v/x//b/8f/2//H8dw/x/////f/7//3////9/////f/7//3+l//lEmvqORZ7/fEOZ/HlE4jwFgL85BYC+OQOAc1MLrVRVqqpUVaqqF1RvrFRVqqpUVaqq91MHrFVVqqr////////////////////////////////9v/x//b/8fx3D/H8dw/x/HcP8f/2//H9ww3KA/7//fwDFcoD/v/9//7//f0K0q1TlsGZUqazuUwes91NVrUpTXK2iUges91MHrPdTXgAuwOW/M4Bn1SbV79Qv1v9//3//f/9/+/+igOT+44IcWhta+YYo/v7//38AAP9//v//f/7//39CqnqrJquyqSarsqlCqnqr/3//f/9//3//f/9//3//fxFV3FWOVeJUjlXiVBFV3FX///9/////f////3////9//v//f/7//3/+//9/4/vofdb/pIC+OQOA4TwDgL45A4DiPAWAvjkDgOI8BYDiPAWAvjkDgOI8BYBasFSwHFobWhxaG1ocWhtaVFWqqlRVqqpUVaqqVFWqqvdTB6xUVaqq91MHrFRVqar3UwesVFWqqvdTB6xUVaqq91MHrP//////////rQL+//////////////////////9craJSXK2iUges91NcraJSB6z3U1ytolIHrPdTXK2iUv9//3//f/9//7//f/+//38dw/x/HcP8f/+//38dw/x//b/8f/+//3//v/9//7//f////3////9/////f////3////9/////f////3////9//v//f////3/+//9/////f////3////9/////f////3////9/////f1RVVVX+//9//3////7//3/+//9/AAD/fwAA/3////9/////f////3/VgfkG1YH5BtWB+QbVgfkG")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_dofvt")

[sub_resource type="ArrayMesh" id="ArrayMesh_86i5c"]
_surfaces = [{
"aabb": AABB(-0.403642, 0.283503, 0.286038, 0.808812, 0.569948, 1e-05),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"name": "Screen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("//8AAIYBAAAqAf//hgEAANT+//+GAQAAAAAAAAAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6o8vu"]
resource_name = "TV1_TV1-Screen"
_surfaces = [{
"aabb": AABB(-0.403642, 0.283503, 0.286038, 0.808812, 0.569948, 1e-05),
"attribute_data": PackedByteArray("aANaLdn9pN6OBKTe/v5aLQ=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"material": SubResource("StandardMaterial3D_2e6ma"),
"name": "Screen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("//8AAIYB//8qAf//hgH//9T+//+GAf//AAAAAAAA////f/9//3//f/9//3//f/9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_86i5c")

[sub_resource type="ArrayMesh" id="ArrayMesh_m3plc"]
resource_name = "TV1_TV1-Screen"
_surfaces = [{
"aabb": AABB(-0.403642, 0.283503, 0.286038, 0.808812, 0.569948, 1e-05),
"attribute_data": PackedByteArray("aANaLdn9pN6OBKTe/v5aLQ=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AAABAAIAAAADAAEA"),
"material": SubResource("StandardMaterial3D_6o8vu"),
"name": "Screen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("//8AAIYB//8qAf//hgH//9T+//+GAf//AAAAAAAA////f/9//3//f/9//3//f/9/")
}]
blend_shape_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m3plc"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2e6ma"]

[node name="CoT_TV" type="Node3D" node_paths=PackedStringArray("omni_light", "spot_light")]
script = ExtResource("1_2e6ma")
mat = SubResource("StandardMaterial3D_2e6ma")
omni_light = NodePath("OmniLight3D")
spot_light = NodePath("SpotLight3D")
noise = SubResource("NoiseTexture3D_m3plc")
screen_noise = SubResource("StandardMaterial3D_6o8vu")

[node name="TV1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.138533, 0, 0.146394)
mesh = SubResource("ArrayMesh_570vt")
skeleton = NodePath("")

[node name="TV1-Screen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.138533, 0, 0.146394)
mesh = SubResource("ArrayMesh_6o8vu")
skeleton = NodePath("")

[node name="TV1-Screen2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.138533, 0, 0.148298)
mesh = SubResource("ArrayMesh_m3plc")
skeleton = NodePath("")

[node name="TV1-Screen3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.138533, 0, 0.146394)
visible = false
mesh = SubResource("ArrayMesh_6o8vu")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_m3plc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.143954, 0.533709, 0.571203)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0.146557, 0.536679, 0.564646)
spot_range = 13.8556
spot_attenuation = 0.0
spot_angle = 37.8443

[node name="shadow_caster" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.137813, 0.465495, -0.127181)
cast_shadow = 3
mesh = SubResource("BoxMesh_2e6ma")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.135583, 0.536526, 0.538084)
stream = ExtResource("3_6o8vu")
unit_size = 2.5
autoplay = true
max_distance = 10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
